ide50 (34) 2015; urgency=medium

  * set maximum file size to 512MB

 -- CS50 <sysadmins@cs50.harvard.edu>  Tue, 15 Sep 2015 16:00:00 -0400

ide50 (33) 2015; urgency=medium

  * clean up some unnecessary code
  * stop chown ~ to prevent node dirs from counting against space limits

 -- CS50 <sysadmins@cs50.harvard.edu>  Tue, 15 Sep 2015 12:00:00 -0400

ide50 (32) 2015; urgency=medium

  * disable manual flow control (ctrl-S)

 -- CS50 <sysadmins@cs50.harvard.edu>  Mon, 14 Sep 2015 18:15:00 -0400

ide50 (31) 2015; urgency=medium

  * remove README altogether
  * added {pset1,hacker1}/water staff solution

 -- CS50 <sysadmins@cs50.harvard.edu>  Wed, 11 Sep 2015 17:00:00 -0400

ide50 (30) 2015; urgency=medium

  * include render50
  * first 2015 release

 -- CS50 <sysadmins@cs50.harvard.edu>  Wed, 9 Sep 2015 11:30:00 -0400

ide50 (29) GM; urgency=medium

  * alias gdb
  * update README

 -- CS50 <sysadmins@cs50.harvard.edu>  Tue, 8 Sep 2015 21:30:00 -0400

ide50 (28) GM; urgency=medium

  * update the GDB runner to latest version

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 4 Sep 2015 17:45:00 -0400

ide50 (27) GM; urgency=medium

  * fix password50 and env variables for offline Apache

 -- CS50 <sysadmins@cs50.harvard.edu>  Mon, 24 Aug 2015 12:30:00 -0400

ide50 (26) GM; urgency=medium

  * now bundling offline config file
  * updated bundled plugins

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 14 Aug 2015 19:30:00 -0400

ide50 (25) GM; urgency=medium

  * updated README
  * style changes to plugins

 -- CS50 <sysadmins@cs50.harvard.edu>  Mon, 10 Aug 2015 16:30:00 -0400

ide50 (24) GM; urgency=medium

  * correct apache configuration permissions

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 7 Aug 2015 20:00:00 -0400

ide50 (23) GM; urgency=medium

  * factored out installations for services for improved setup
  * improved README to more closely match the latest revisions

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 7 Aug 2015 19:00:00 -0400
