@@ -39,6 +39,11 @@ if ! grep -qs 'ide50.sh' /etc/apache2/envvars; then
     sed -i 's-cloud9.sh-cloud9.sh\n. /etc/profile.d/ide50.sh-' /etc/apache2/envvars
 fi
 
+# in interactive shells, prevent manual flow control so Ctrl-S doesn't pause
+if ! grep -qs 'stty -ixon' /home/ubuntu/.bashrc; then
+    echo "stty -ixon" >>/home/ubuntu/.bashrc
+fi
+
 rm -rf /home/ubuntu/cs50
 # remove old source file if it exists
 if [ -f /etc/profile.d/app.sh ]; then
