@@ -1,3 +1,9 @@
+ide50 (35) 2015; urgency=medium
+
+  * move stty manipulation to bashrc to apply only to user shells
+
+ -- CS50 <sysadmins@cs50.harvard.edu>  Tue, 15 Sep 2015 18:30:00 -0400
+
 ide50 (34) 2015; urgency=medium
 
   * set maximum file size to 512MB
